--- a/second_page.html
+++ b/second_page.html
@@ -14,6 +14,6 @@
       <li><button onclick="location.href='https://yzu1113310.github.io/05/'" style="width:100px;height:50px;"><p style="font-weight:bold;">作業5</p></button></li>
     </ul>
     <br>
-    <button onclick="history.go(-1);" style="width:150px;height:80px;"><p style="font-size:25px;">返回上一頁</p></button>
+    <button onclick="location.href='main.html'" style="width:150px;height:80px;"><p style="font-size:25px;">返回上一頁</p></button>
   </body>
 </html>
